objects/mcsocsel10__SocialInsightsPost__x.object
<CustomObject>
    <externalDataSource>mcsocsel10__Social_Insights</externalDataSource>
    <externalName>SocialInsightsPost</externalName>
    <fields>
        <fullName>mcsocsel10__Content__c</fullName>
        <description>Message</description>
        <externalDeveloperName>Content</externalDeveloperName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__ExternalPostId__c</fullName>
        <description>External Post Id</description>
        <externalDeveloperName>ExternalPostId</externalDeveloperName>
        <label>External Post Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Headline__c</fullName>
        <description>Headline</description>
        <externalDeveloperName>Headline</externalDeveloperName>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__MediaProvider__c</fullName>
        <externalDeveloperName>MediaProvider</externalDeveloperName>
        <label>Social Studio Media Type</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__MediaTypeTitle__c</fullName>
        <description>Social Studio Media Type Title</description>
        <externalDeveloperName>MediaTypeTitle</externalDeveloperName>
        <label>Social Studio Media Type Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__MediaType__c</fullName>
        <externalDeveloperName>MediaType</externalDeveloperName>
        <label>Social Studio Media Provider</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__ParentPersona__c</fullName>
        <description>Parent Post Persona Id</description>
        <externalDeveloperName>ParentPersona</externalDeveloperName>
        <label>Parent Post Persona Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__ParentPost__c</fullName>
        <description>Parent Post Id</description>
        <externalDeveloperName>ParentPost</externalDeveloperName>
        <label>Parent Post Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Persona__c</fullName>
        <description>Persona Id</description>
        <externalDeveloperName>Persona</externalDeveloperName>
        <label>Persona Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__PlainTextContent__c</fullName>
        <description>Plain Text Message</description>
        <externalDeveloperName>PlainTextContent</externalDeveloperName>
        <label>Plain Text Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Posted__c</fullName>
        <externalDeveloperName>Posted</externalDeveloperName>
        <label>Posted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Sentiment__c</fullName>
        <externalDeveloperName>Sentiment</externalDeveloperName>
        <label>Sentiment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__TruncatedContent__c</fullName>
        <description>Message Clipping</description>
        <externalDeveloperName>TruncatedContent</externalDeveloperName>
        <label>Message Clipping</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__TruncatedPlainTextContent__c</fullName>
        <description>Message Clipping Plain Text</description>
        <externalDeveloperName>TruncatedPlainTextContent</externalDeveloperName>
        <label>Message Clipping Plain Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Social Intelligence Post</label>
    <pluralLabel>Social Intelligence Post</pluralLabel>
</CustomObject>